@startuml

title __CONTROLLER's Class Diagram__\n


    namespace ontroller {
      class Controller.HelloController {
          - loginButton : Button
          - passwordField : PasswordField
          - usernameField : TextField
          + activeLoginButton()
          - Teacher()
          - ValidCredentials()
          - openStudentWindow()
          - openTeacherWindow()
          - showErrorAlert()
      }
    }




    namespace ontroller {
      class Controller.StudentWin {
          - taskAnswerFileColumn : TableColumn<Task, File>
          - taskCommentColumn : TableColumn<Task, String>
          - taskFileColumn : TableColumn<Task, File>
          - taskList : ObservableList<Task>
          - taskNameColumn : TableColumn<Task, String>
          - taskStatusColumn : TableColumn<Task, String>
          - taskTable : TableView<Task>
          - taskTextAnswerColumn : TableColumn<Task, String>
          - textAnswerField : TextField
          + StudentWin()
          + addAnswerFile()
          + initialize()
          - deleteTextAnswer()
          - deleteTextAnswerFromDatabase()
          - loadTasksFromDatabase()
          - openFile()
          - saveAnswerFileInDatabase()
          - saveTextAnswer()
          - saveTextAnswerInDatabase()
      }
    }

  


    namespace ontroller {
      class Controller.TeacherWin {
          + fileChooser : FileChooser
          + taskAnswerFileColumn : TableColumn<Task, File>
          + taskCommentColumn : TableColumn<Task, String>
          + taskCommentField : TextField
          + taskFileColumn : TableColumn<Task, File>
          + taskFileField : TextField
          + taskNameColumn : TableColumn<Task, String>
          + taskNameField : TextField
          + taskStatusColumn : TableColumn<Task, String>
          + taskStatusField : TextField
          + taskTable : TableView<Task>
          + taskTextAnswerColumn : TableColumn<Task, String>
          - taskList : ObservableList<Task>
          + TeacherWin()
          + close()
          + handleAddTaskButtonAction()
          + handleDeleteTask()
          + handleFile()
          + handleMarkCompleteButtonAction()
          + initialize()
          - deleteTaskFromDatabase()
          - loadTasksFromDatabase()
          - openFile()
          - saveTaskToDatabase()
          - updateTaskStatus()
      }
    }

  

  Controller.StudentWin .up.|> javafx.fxml.Initializable
  Controller.StudentWin o-- com.example.kur.DatabaseManager : databaseManager
  Controller.TeacherWin .up.|> javafx.fxml.Initializable
  Controller.TeacherWin o-- com.example.kur.DatabaseManager : databaseManager
  Controller.TeacherWin o-- com.example.kur.Task : task
  Controller.TeacherWin o-- dao.TaskDAO : taskDAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
